@@ -52,6 +52,7 @@
  - [2462293] Enable Google Sitemaps for XMLUI
  - Fixed small bug in XMLUI's org.dspace.app.xmlui.cocoon.DSpaceMETSGenerator which caused Repository-wide METS file to fail to generate.
  - [2477820] DSpace 1.5 XMLUI - Enable METS <amdSec> using crosswalks
+ - Fix for SF bug [2541285] Submission Forms don't preserve order of values
 
 (Kim Shepherd)
  - [2385187] Fix for toDate method in DCDate
